@@ -1,3 +1,13 @@
+2000-11-15  Bruno Haible  <haible@clisp.cons.org>
+
+        * makemake.in: If TSYS=win32msvc, introduce a Makefile variable MFLAGS.
+          (lisp.exe): Don't use /MD flag; use MFLAGS instead.
+
+2000-11-14  Bruno Haible  <haible@clisp.cons.org>
+
+        * Makefile.devel (PERL): New macro.
+          (acorn/makefile.cc, acorn/makefile.gcc): Use it.
+
 2000-11-13  Bruno Haible  <haible@clisp.cons.org>
 
         * lispbibl.d (UNIX_MACOSX): Renamed from UNIX_RHAPSODY.
